--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -56,6 +56,9 @@
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
                         </a>
                         <hr>
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/free">
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Free")
+                        </a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/subscriptions">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Subscriptions")
                         </a>
