--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -67,6 +67,9 @@
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
                         </a>
                         <hr>
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/bundles">
+                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Bundles")
+                        </a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/free">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Free")
                         </a>
